# gen/http/openapi.yaml
@@ -95,6 +95,14 @@ paths:
             responses:
                 "204":
                     description: No Content response.
+                "401":
+                    description: Unauthorized response.
+                    schema:
+                        $ref: '#/definitions/UserCreateUserAlreadyExistsResponseBody'
+                "500":
+                    description: Internal Server Error response.
+                    schema:
+                        $ref: '#/definitions/UserCreateInternalServerErrorResponseBody'
             schemes:
                 - http
     /users/me:
@@ -116,6 +124,10 @@ paths:
                     description: Unauthorized response.
                     schema:
                         $ref: '#/definitions/UserDeleteUnauthorizedResponseBody'
+                "500":
+                    description: Internal Server Error response.
+                    schema:
+                        $ref: '#/definitions/UserDeleteInternalServerErrorResponseBody'
             schemes:
                 - http
 definitions:
@@ -126,14 +138,14 @@ definitions:
             password:
                 type: string
                 description: The password of the user
-                example: Tempora numquam nisi eaque.
+                example: Illum tempore magnam doloribus qui est alias.
             username:
                 type: string
                 description: The username of the user
-                example: Et excepturi eligendi nihil consequatur incidunt.
+                example: Aspernatur facere odit in molestiae quos.
         example:
-            password: Suscipit non ad adipisci accusamus.
-            username: Explicabo ipsum distinctio consequatur consectetur blanditiis repudiandae.
+            password: Sed nemo maxime eaque tempora non.
+            username: Illum ducimus reprehenderit assumenda dolor rerum.
         required:
             - username
             - password
@@ -144,14 +156,14 @@ definitions:
             access_token:
                 type: string
                 description: The access token of the user
-                example: Laborum illum tempore magnam.
+                example: Repellendus in sint quae consequuntur quibusdam.
             refresh_token:
                 type: string
                 description: The refresh token of the user
-                example: Qui est.
+                example: Vel libero dolor.
         example:
-            access_token: Consequatur illum ducimus reprehenderit assumenda.
-            refresh_token: Rerum fugit sed nemo.
+            access_token: Tempore corporis odit aspernatur et dolorum.
+            refresh_token: Et consequatur nam atque soluta quos sed.
         required:
             - access_token
             - refresh_token
@@ -162,25 +174,25 @@ definitions:
             access_token:
                 type: string
                 description: The access token of the user
-                example: Reprehenderit occaecati qui in.
+                example: Impedit similique autem odio nihil.
             expires_in:
                 type: integer
                 description: The expires in of the user
-                example: 7100820663025279588
+                example: 2799093750981729898
                 format: int64
             refresh_token:
                 type: string
                 description: The refresh token of the user
-                example: Officia vel dolorem fuga vel omnis neque.
+                example: Nihil consequatur incidunt.
             token_type:
                 type: string
                 description: The token type of the user
-                example: Repellat voluptatem consectetur.
+                example: Expedita soluta ex vel et.
         example:
-            access_token: Animi ut nihil id alias culpa optio.
-            expires_in: 2627895758942114620
-            refresh_token: Nihil impedit similique autem.
-            token_type: Voluptatem accusantium minus repellendus non.
+            access_token: Tempora numquam nisi eaque.
+            expires_in: 4028798900170104312
+            refresh_token: Non ad adipisci accusamus.
+            token_type: Explicabo ipsum distinctio consequatur consectetur blanditiis repudiandae.
         required:
             - access_token
             - token_type
@@ -194,109 +206,11 @@ definitions:
                 $ref: '#/definitions/IssueInput'
         example:
             user:
-                password: Dolores fuga asperiores voluptatem aspernatur eum.
-                username: Explicabo placeat.
+                password: Illo et rerum quia odit voluptas.
+                username: Esse sapiente temporibus vel.
         required:
             - user
     TokenIssueUnauthorizedResponseBody:
-        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
-        type: object
-        properties:
-            fault:
-                type: boolean
-                description: Is the error a server-side fault?
-                example: true
-            id:
-                type: string
-                description: ID is a unique identifier for this particular occurrence of the problem.
-                example: 123abc
-            message:
-                type: string
-                description: Message is a human-readable explanation specific to this occurrence of the problem.
-                example: parameter 'p' must be an integer
-            name:
-                type: string
-                description: Name is the name of this class of errors.
-                example: bad_request
-            temporary:
-                type: boolean
-                description: Is the error temporary?
-                example: true
-            timeout:
-                type: boolean
-                description: Is the error a timeout?
-                example: false
-        description: Unauthorized (default view)
-        example:
-            fault: false
-            id: 123abc
-            message: parameter 'p' must be an integer
-            name: bad_request
-            temporary: false
-            timeout: true
-        required:
-            - name
-            - id
-            - message
-            - temporary
-            - timeout
-            - fault
-    TokenRefreshInternalServerErrorResponseBody:
-        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
-        type: object
-        properties:
-            fault:
-                type: boolean
-                description: Is the error a server-side fault?
-                example: false
-            id:
-                type: string
-                description: ID is a unique identifier for this particular occurrence of the problem.
-                example: 123abc
-            message:
-                type: string
-                description: Message is a human-readable explanation specific to this occurrence of the problem.
-                example: parameter 'p' must be an integer
-            name:
-                type: string
-                description: Name is the name of this class of errors.
-                example: bad_request
-            temporary:
-                type: boolean
-                description: Is the error temporary?
-                example: false
-            timeout:
-                type: boolean
-                description: Is the error a timeout?
-                example: false
-        description: Internal Server Error (default view)
-        example:
-            fault: false
-            id: 123abc
-            message: parameter 'p' must be an integer
-            name: bad_request
-            temporary: true
-            timeout: true
-        required:
-            - name
-            - id
-            - message
-            - temporary
-            - timeout
-            - fault
-    TokenRefreshRequestBody:
-        title: TokenRefreshRequestBody
-        type: object
-        properties:
-            token:
-                $ref: '#/definitions/RefreshInput'
-        example:
-            token:
-                access_token: Et quia illum.
-                refresh_token: Distinctio quam sunt est sed alias.
-        required:
-            - token
-    TokenRefreshUnauthorizedResponseBody:
         title: 'Mediatype identifier: application/vnd.goa.error; view=default'
         type: object
         properties:
@@ -339,19 +253,62 @@ definitions:
             - temporary
             - timeout
             - fault
-    UserCreateRequestBody:
-        title: UserCreateRequestBody
+    TokenRefreshInternalServerErrorResponseBody:
+        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
         type: object
         properties:
-            user:
-                $ref: '#/definitions/UserInput'
+            fault:
+                type: boolean
+                description: Is the error a server-side fault?
+                example: true
+            id:
+                type: string
+                description: ID is a unique identifier for this particular occurrence of the problem.
+                example: 123abc
+            message:
+                type: string
+                description: Message is a human-readable explanation specific to this occurrence of the problem.
+                example: parameter 'p' must be an integer
+            name:
+                type: string
+                description: Name is the name of this class of errors.
+                example: bad_request
+            temporary:
+                type: boolean
+                description: Is the error temporary?
+                example: true
+            timeout:
+                type: boolean
+                description: Is the error a timeout?
+                example: false
+        description: Internal Server Error (default view)
         example:
-            user:
-                password: Occaecati vel adipisci.
-                username: Quia architecto veritatis deleniti ea perferendis.
+            fault: false
+            id: 123abc
+            message: parameter 'p' must be an integer
+            name: bad_request
+            temporary: false
+            timeout: false
         required:
-            - user
-    UserDeleteUnauthorizedResponseBody:
+            - name
+            - id
+            - message
+            - temporary
+            - timeout
+            - fault
+    TokenRefreshRequestBody:
+        title: TokenRefreshRequestBody
+        type: object
+        properties:
+            token:
+                $ref: '#/definitions/RefreshInput'
+        example:
+            token:
+                access_token: Laboriosam exercitationem.
+                refresh_token: Voluptatem sit culpa.
+        required:
+            - token
+    TokenRefreshUnauthorizedResponseBody:
         title: 'Mediatype identifier: application/vnd.goa.error; view=default'
         type: object
         properties:
@@ -381,11 +338,195 @@ definitions:
                 example: false
         description: Unauthorized (default view)
         example:
-            fault: false
+            fault: true
+            id: 123abc
+            message: parameter 'p' must be an integer
+            name: bad_request
+            temporary: true
+            timeout: false
+        required:
+            - name
+            - id
+            - message
+            - temporary
+            - timeout
+            - fault
+    UserCreateInternalServerErrorResponseBody:
+        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+        type: object
+        properties:
+            fault:
+                type: boolean
+                description: Is the error a server-side fault?
+                example: false
+            id:
+                type: string
+                description: ID is a unique identifier for this particular occurrence of the problem.
+                example: 123abc
+            message:
+                type: string
+                description: Message is a human-readable explanation specific to this occurrence of the problem.
+                example: parameter 'p' must be an integer
+            name:
+                type: string
+                description: Name is the name of this class of errors.
+                example: bad_request
+            temporary:
+                type: boolean
+                description: Is the error temporary?
+                example: false
+            timeout:
+                type: boolean
+                description: Is the error a timeout?
+                example: true
+        description: Internal Server Error (default view)
+        example:
+            fault: true
+            id: 123abc
+            message: parameter 'p' must be an integer
+            name: bad_request
+            temporary: true
+            timeout: false
+        required:
+            - name
+            - id
+            - message
+            - temporary
+            - timeout
+            - fault
+    UserCreateRequestBody:
+        title: UserCreateRequestBody
+        type: object
+        properties:
+            user:
+                $ref: '#/definitions/UserInput'
+        example:
+            user:
+                password: Occaecati vel adipisci.
+                username: Quia architecto veritatis deleniti ea perferendis.
+        required:
+            - user
+    UserCreateUserAlreadyExistsResponseBody:
+        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+        type: object
+        properties:
+            fault:
+                type: boolean
+                description: Is the error a server-side fault?
+                example: false
+            id:
+                type: string
+                description: ID is a unique identifier for this particular occurrence of the problem.
+                example: 123abc
+            message:
+                type: string
+                description: Message is a human-readable explanation specific to this occurrence of the problem.
+                example: parameter 'p' must be an integer
+            name:
+                type: string
+                description: Name is the name of this class of errors.
+                example: bad_request
+            temporary:
+                type: boolean
+                description: Is the error temporary?
+                example: true
+            timeout:
+                type: boolean
+                description: Is the error a timeout?
+                example: true
+        description: User Already Exists (default view)
+        example:
+            fault: true
             id: 123abc
             message: parameter 'p' must be an integer
             name: bad_request
             temporary: false
+            timeout: true
+        required:
+            - name
+            - id
+            - message
+            - temporary
+            - timeout
+            - fault
+    UserDeleteInternalServerErrorResponseBody:
+        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+        type: object
+        properties:
+            fault:
+                type: boolean
+                description: Is the error a server-side fault?
+                example: false
+            id:
+                type: string
+                description: ID is a unique identifier for this particular occurrence of the problem.
+                example: 123abc
+            message:
+                type: string
+                description: Message is a human-readable explanation specific to this occurrence of the problem.
+                example: parameter 'p' must be an integer
+            name:
+                type: string
+                description: Name is the name of this class of errors.
+                example: bad_request
+            temporary:
+                type: boolean
+                description: Is the error temporary?
+                example: false
+            timeout:
+                type: boolean
+                description: Is the error a timeout?
+                example: false
+        description: Internal Server Error (default view)
+        example:
+            fault: true
+            id: 123abc
+            message: parameter 'p' must be an integer
+            name: bad_request
+            temporary: true
+            timeout: true
+        required:
+            - name
+            - id
+            - message
+            - temporary
+            - timeout
+            - fault
+    UserDeleteUnauthorizedResponseBody:
+        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+        type: object
+        properties:
+            fault:
+                type: boolean
+                description: Is the error a server-side fault?
+                example: false
+            id:
+                type: string
+                description: ID is a unique identifier for this particular occurrence of the problem.
+                example: 123abc
+            message:
+                type: string
+                description: Message is a human-readable explanation specific to this occurrence of the problem.
+                example: parameter 'p' must be an integer
+            name:
+                type: string
+                description: Name is the name of this class of errors.
+                example: bad_request
+            temporary:
+                type: boolean
+                description: Is the error temporary?
+                example: true
+            timeout:
+                type: boolean
+                description: Is the error a timeout?
+                example: false
+        description: Unauthorized (default view)
+        example:
+            fault: true
+            id: 123abc
+            message: parameter 'p' must be an integer
+            name: bad_request
+            temporary: true
             timeout: true
         required:
             - name
@@ -401,14 +542,14 @@ definitions:
             password:
                 type: string
                 description: The password of the user
-                example: Cumque suscipit quia aperiam tempore.
+                example: Repellat voluptatem consectetur.
             username:
                 type: string
                 description: The name of the user
-                example: Minus cumque quia.
+                example: Occaecati qui in.
         example:
-            password: Non non qui repellendus.
-            username: Dolore vero et voluptatem eius.
+            password: Omnis neque quas animi ut nihil.
+            username: Ad officia vel dolorem fuga.
         required:
             - username
             - password
